--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <a class="nav-link text-white" href="#">FAQ</a>
                             </li>
                         </ul>
-                        <a href="#" class="btn btn-warning">Contact</a>
+                        <a href="#" class="btn btn-contact">Contact</a>
                     </div>
 
                     <!-- Offcanvas (Mobile Nav) -->
@@ -80,7 +80,7 @@
                                 </li>
                             </ul>
                             <div class="d-grid mt-4">
-                                <a href="#" class="btn btn-warning">Contact</a>
+                                <a href="#" class="btn btn-contact">Contact</a>
                             </div>
                         </div>
                     </div>
@@ -176,7 +176,7 @@
                             <div class="stat-number">
                                 <span class="count" data-count="10">0</span><span class="stat-txt">Lakh+</span>
                             </div>
-                            <div class="stat-label">100+ Clients and Counting</div>
+                            <div class="stat-label">100+ <br> Clients and Counting</div>
                         </div>
                     </div>
                 </div>
