--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
                                 aria-label="Close"></button>
                         </div>
-                        <div class="offcanvas-body">
+                        <div class="offcanvas-body d-block d-lg-none">
                             <ul class="navbar-nav">
                                 <li class="nav-item">
                                     <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
