--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                             <div class="stat-number">
                                 <span class="count" data-count="10">0</span><span class="stat-txt">Lakh+</span>
                             </div>
-                            <div class="stat-label">100+ <br> Clients and Counting</div>
+                            <div class="stat-label">100+ Clients and Counting</div>
                         </div>
                     </div>
                 </div>
