--- a/index.html
+++ b/index.html
@@ -156,27 +156,27 @@
                     <div class="col-md-4">
                         <div>
                             <div class="stat-number">
-                                <span class="count" data-count="10">0</span><span class="stat-txt">Lakh+</span>
+                                <span class="count" data-count="15">0</span><span class="stat-txt">Lakh+</span>
                             </div>
-                            <div class="stat-label">15 Lakh+ Words Translated</div>
+                            <div class="stat-label">Words Translated</div>
                         </div>
                     </div>
 
                     <div class="col-md-4 divider">
                         <div>
                             <div class="stat-number">
-                                <span class="count" data-count="10">0</span><span class="stat-txt">Lakh+</span>
+                                <span class="count" data-count="1">0</span><span class="stat-txt">Lakh+</span>
                             </div>
-                            <div class="stat-label">1 Lakh+ Artworks Delivered</div>
+                            <div class="stat-label">Artworks Delivered</div>
                         </div>
                     </div>
 
                     <div class="col-md-4 divider">
                         <div>
                             <div class="stat-number">
-                                <span class="count" data-count="10">0</span><span class="stat-txt">Lakh+</span>
+                                <span class="count" data-count="100">0</span><span class="stat-txt">+</span>
                             </div>
-                            <div class="stat-label">100+ Clients and Counting</div>
+                            <div class="stat-label">Clients and Counting</div>
                         </div>
                     </div>
                 </div>
