privacy policy page

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
                 </div>
                 <div class="col-lg-4 col-md-6">
                     <div class="copyright-section">
-                        <a href="#" class="privacy-link">Privacy Policy</a>
+                        <a href="./privacy-policy.html" class="privacy-link">Privacy Policy</a>
                         <p class="copyright-text">
                             Copyright © 2025 Tring Creatives.
                         </p>
