--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     </button>
 
                     <!-- Desktop Nav (Hidden on mobile) -->
-                    <div class="collapse navbar-collapse d-none d-lg-flex justify-content-between">
+                    <div class="collapse w-100 navbar-collapse d-none d-lg-flex justify-content-between">
                         <ul class="navbar-nav glassy-nav mx-auto">
                             <li class="nav-item">
                                 <a class="nav-link text-white active" aria-current="page" href="#">Home</a>
