update mail functionality

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                                 <a class="nav-link text-white" href="#">FAQ</a>
                             </li>
                         </ul>
-                        <a href="#" id="openModal" class="btn btn-contact">Contact</a>
+                        <a href="#" class="btn btn-contact">Contact</a>
                     </div>
 
                     <!-- Offcanvas (Mobile Nav) -->
