--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tring Creatives</title> 
+    <title>Tring Creatives</title>
     <link rel="icon" href="./assets/images/logo/favicon.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
@@ -200,18 +200,25 @@
                         <div class="card-body row align-items-center">
                             <div class="col-lg-8">
                                 <div class="card-content text-start">
-                                    <h4><strong>Tring</strong> Creatives</h4>
-                                    <h2>Translations</h2>
-                                    <p>Beyond simple translation, our expert team meticulously adapts your designs
-                                        for
-                                        global markets, ensuring linguistic accuracy and deep cultural resonance.
+                                    <!-- <h4><strong>Tring</strong> Creatives</h4> -->
+                                    <h2>Transcreation</strong> - More Than Just Translation</h2>
+                                    <p>Conquer Every Market with Native Precision</p>
+                                    <p>Tring Creatives goes beyond translation; powering your brand with not just
+                                        accurate language but with inspiration that sells.
                                     </p>
-                                    <p>At Tring Creatives, we meticulously craft visual translations that resonate
-                                        deeply with
-                                        your target audiences.</p>
-                                    <p>We ensure your designs are not just understood, but truly felt and embraced
-                                        by
-                                        global communities.</p>
+                                    <p>At Tring, we don’t just translate your campaigns. We
+                                        <strong>transcreate</strong> them. That means our specialists reimagine your
+                                        messages, taglines, and creative assets so they aren’t just understood but felt
+                                        and acted on by every local market.
+                                    </p>
+                                    <p>
+                                        Every translation undergoes rigorous <strong>proofreading</strong> and
+                                        <strong>multi-stage QC</strong> , ensuring
+                                        your message is spot-on, culturally relevant, and market-ready. Whether it's
+                                        <strong>packaging, ads, websites, or social media,</strong>
+                                        we help your brand cut through
+                                        language barriers and win hearts in every corner of the map.
+                                    </p>
                                 </div>
                             </div>
                             <div class="col-lg-4">
@@ -225,8 +232,9 @@
             </div>
             <div class="service-content pt-0">
                 <img src="./assets/images/icons/path-to-icon1.svg" alt="Icon" class="service-icon">
-                <h3>Translati<span>o</span>ns</h3>
-                <p>Sometimes Translation or Dubbing is more than just words. It’s about cultural connection.</p>
+                <h3>Transcre<span>a</span>tion</h3>
+                <p>Tring Creatives goes beyond translation; powering your brand with not just accurate language but with
+                    inspiration that sells.</p>
             </div>
 
             <div class="service-slider-wrapper position-relative overflow-hidden">
@@ -241,24 +249,21 @@
                         <div class="card-body row align-items-center">
                             <div class="col-lg-8">
                                 <div class="card-content text-start">
-                                    <h4><strong>Tring</strong> Creatives</h4>
-                                    <h2>Adaptions</h2>
+                                    <!-- <h4><strong>Tring</strong> Creatives</h4> -->
+                                    <h2>High-Volume Adaptations</h2>
+                                    <p>From One Creative to Thousands - Fast, Flawless, and On Time!</p>
                                     <p>
-                                        Our expert team goes beyond simple resizing,
-                                        meticulously crafting your designs to thrive across every
-                                        platform and deeply resonate within diverse global
-                                        markets. Our process ensures your message feels native
-                                        and engaging, from mobile screens in India to billboards
-                                        internationally.
+                                        When your campaign needs to be everywhere in every size, format, and medium,
+                                        we've got you covered. At Tring Creatives, we’re built for scale. With a proven
+                                        track record of <strong>3000+ artworks per brand per month</strong> , we ensure
+                                        your vision is
+                                        adapted perfectly across print, digital, OOH, packaging, and beyond.
                                     </p>
                                     <p>
-                                        At Tring Creatives, we pay close attention to detail,
-                                        ensuring your visual assets are optimized for each specific
-                                        context. From adapting aspect ratios and formats to
-                                        considering local preferences
+                                        Our dedicated client communication team works hand-in-hand with our production
+                                        experts, keeping the process smooth, responsive, and predictable - so much so,
+                                        it’s like putting your creative workflow on <strong>autopilot.</strong>
                                     </p>
-                                    <p>Reach your global audience seamlessly. Your designs,
-                                        perfectly tailored for any platform, any culture.</p>
                                 </div>
                             </div>
                             <div class="col-lg-4">
@@ -273,16 +278,56 @@
             <div class="service-content pt-0">
                 <img src="./assets/images/icons/path-to-icon2.svg" alt="Icon" class="service-icon">
                 <h3>Adapti<span>o</span>ns</h3>
-                <p>Sometimes Translation or Dubbing is more than just words. It’s about cultural connection.</p>
+                <p>From One Creative to Thousands - Fast, Flawless, and On Time!</p>
             </div>
 
-            <div class="service-card">
-                <img src="./assets/images/gifs/path-to-your-branding.gif" alt="Branding" class="service-image">
-                <img src="./assets/images/icons/path-to-icon3.svg" alt="Icon" class="service-icon">
-                <div class="service-content">
-                    <h3>Br<span>a</span>nding</h3>
-                    <p>Sometimes Translation or Dubbing is more than just words. It’s about cultural connection.</p>
+
+            <div class="service-slider-wrapper position-relative overflow-hidden">
+                <!-- First Card -->
+                <div class="service-card p-0 card-one active">
+                    <img src="./assets/images/gifs/path-to-your-branding.gif" alt="Translations"
+                        class="service-image h-100">
                 </div>
+                <!-- Second Card -->
+                <div class="service-card p-0 card-two">
+                    <div class="card h-100">
+                        <div class="card-body row align-items-center">
+                            <div class="col-lg-8">
+                                <div class="card-content text-start">
+                                    <!-- <h4><strong>Tring</strong> Creatives</h4> -->
+                                    <h2>Branding Services</h2>
+                                    <p>Your Brand. Elevated. Everywhere</p>
+                                    <p>
+                                        Your brand is more than a logo, it’s an experience! Our team of visionary art
+                                        directors, visualisers, and designers craft a visual language that sells your
+                                        story, strengthens your identity, and resonates deeply with your audience.
+                                    </p>
+                                    <p>
+                                        At Tring Creatives, we believe a brand is more than a logo it’s the heartbeat of
+                                        your business. Our team of visionary art directors, detail-obsessed visualisers,
+                                        and inspired designers create a visual language that captures who you are, what
+                                        you stand for, and why your audience should care.
+                                    </p>
+                                    <p class="fw-bold">
+                                        With Tring Creatives, your brand doesn’t just exist.
+                                        It speaks. It shines. It sells.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="col-lg-4">
+                                <div class="card-img">
+                                    <img class="w-100" src="./assets/images/service/card-2.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="service-content pt-0">
+                <h3>Br<span>a</span>nding</h3>
+                <p>Your brand is more than a logo, it’s an experience! Our team of visionary art directors, visualisers,
+                    and designers craft a visual language that sells your story, strengthens your identity, and
+                    resonates deeply with your audience.</p>
             </div>
         </div>
     </section>
@@ -683,7 +728,7 @@
                             <input type="text" id="name" name="name" class="form-control">
                             <div class="error-message" id="nameError"></div>
                         </div>
-                        
+
                         <div class="form-group">
                             <label for="phone">Mobile Number *</label>
                             <input type="phone" id="phone" name="phone" class="form-control">
@@ -694,7 +739,7 @@
                             <input type="email" id="email" name="email" class="form-control">
                             <div class="error-message" id="emailError"></div>
                         </div>
-                        
+
                         <div class="form-group">
                             <label for="service">Service *</label>
                             <input type="text" id="service" name="service" class="form-control">
