--- a/index.html
+++ b/index.html
@@ -547,8 +547,8 @@
                                 <i class="fas text-warning fa-star"></i>
                             </div>
                             <p class="text-dark small px-2">
-                                Tring Creatives turned our ideas into bold, beautiful designs—logos, POSMs &
-                                packaging—that truly reflect our brand’s story.
+                                Tring Creatives turned our ideas into bold, beautiful LBLs, POSMs, logos & packaging.
+                                Fresh, impactful, and true to our brand.
                             </p>
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
