--- a/index.html
+++ b/index.html
@@ -570,8 +570,8 @@
                                 <i class="fas text-warning fa-star"></i>
                             </div>
                             <p class="text-dark small px-2">
-                                Their flawless transcreation captures cultural nuance, making every campaign powerful
-                                and spot-on for each target market.
+                                Tring Creatives’ flawless transcreation is precise, culturally spot-on & powerful. Our
+                                go-to for high-stakes multilingual campaigns.
                             </p>
                         </div>
                         <img src="./assets/images/testimonial-img/stamp.svg" alt="Stamp" class="stamp-img">
